--- a/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
+++ b/ch07-04-bringing-paths-into-scope-with-the-use-keyword.html
@@ -328,7 +328,7 @@ fn main() {
 </span><span class="boring">
 </span>    let secret_number = rand::thread_rng().gen_range(1, 101);
 <span class="boring">
-</span><span class="boring">    println!(&quot;The secret number is: {}&quot;, secret_number);
+</span><span class="boring">    println!(&quot;祕密數字爲：{}&quot;, secret_number);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;請輸入你的猜測數字。&quot;);
 </span><span class="boring">
@@ -364,7 +364,7 @@ use std::io;
 </span><span class="boring">
 </span><span class="boring">    let secret_number = rand::thread_rng().gen_range(1, 101);
 </span><span class="boring">
-</span><span class="boring">    println!(&quot;The secret number is: {}&quot;, secret_number);
+</span><span class="boring">    println!(&quot;祕密數字爲：{}&quot;, secret_number);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;請輸入你的猜測數字。&quot;);
 </span><span class="boring">
@@ -377,9 +377,9 @@ use std::io;
 </span><span class="boring">    println!(&quot;你的猜測數字：{}&quot;, guess);
 </span><span class="boring">
 </span><span class="boring">    match guess.cmp(&amp;secret_number) {
-</span><span class="boring">        Ordering::Less =&gt; println!(&quot;Too small!&quot;),
-</span><span class="boring">        Ordering::Greater =&gt; println!(&quot;Too big!&quot;),
-</span><span class="boring">        Ordering::Equal =&gt; println!(&quot;You win!&quot;),
+</span><span class="boring">        Ordering::Less =&gt; println!(&quot;太小了！&quot;),
+</span><span class="boring">        Ordering::Greater =&gt; println!(&quot;太大了！&quot;),
+</span><span class="boring">        Ordering::Equal =&gt; println!(&quot;獲勝！&quot;),
 </span><span class="boring">    }
 </span><span class="boring">}
 </span></code></pre>
@@ -395,7 +395,7 @@ use std::{cmp::Ordering, io};
 </span><span class="boring">
 </span><span class="boring">    let secret_number = rand::thread_rng().gen_range(1, 101);
 </span><span class="boring">
-</span><span class="boring">    println!(&quot;The secret number is: {}&quot;, secret_number);
+</span><span class="boring">    println!(&quot;祕密數字爲：{}&quot;, secret_number);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;請輸入你的猜測數字。&quot;);
 </span><span class="boring">
@@ -405,14 +405,14 @@ use std::{cmp::Ordering, io};
 </span><span class="boring">        .read_line(&amp;mut guess)
 </span><span class="boring">        .expect(&quot;讀取行數失敗&quot;);
 </span><span class="boring">
-</span><span class="boring">    let guess: u32 = guess.trim().parse().expect(&quot;Please type a number!&quot;);
+</span><span class="boring">    let guess: u32 = guess.trim().parse().expect(&quot;請輸入一個數字！&quot;);
 </span><span class="boring">
 </span><span class="boring">    println!(&quot;你的猜測數字：{}&quot;, guess);
 </span><span class="boring">
 </span><span class="boring">    match guess.cmp(&amp;secret_number) {
-</span><span class="boring">        Ordering::Less =&gt; println!(&quot;Too small!&quot;),
-</span><span class="boring">        Ordering::Greater =&gt; println!(&quot;Too big!&quot;),
-</span><span class="boring">        Ordering::Equal =&gt; println!(&quot;You win!&quot;),
+</span><span class="boring">        Ordering::Less =&gt; println!(&quot;太小了！&quot;),
+</span><span class="boring">        Ordering::Greater =&gt; println!(&quot;太大了！&quot;),
+</span><span class="boring">        Ordering::Equal =&gt; println!(&quot;獲勝！&quot;),
 </span><span class="boring">    }
 </span><span class="boring">}
 </span></code></pre>
