--- a/ch09-03-to-panic-or-not-to-panic.html
+++ b/ch09-03-to-panic-or-not-to-panic.html
@@ -229,10 +229,10 @@
 
         match guess.cmp(&amp;secret_number) {
             // --snip--
-<span class="boring">            Ordering::Less =&gt; println!(&quot;Too small!&quot;),
-</span><span class="boring">            Ordering::Greater =&gt; println!(&quot;Too big!&quot;),
+<span class="boring">            Ordering::Less =&gt; println!(&quot;太小了！&quot;),
+</span><span class="boring">            Ordering::Greater =&gt; println!(&quot;太大了！&quot;),
 </span><span class="boring">            Ordering::Equal =&gt; {
-</span><span class="boring">                println!(&quot;You win!&quot;);
+</span><span class="boring">                println!(&quot;獲勝！&quot;);
 </span><span class="boring">                break;
 </span><span class="boring">            }
 </span><span class="boring">        }
