deploy: 44ebf4736cc8e3d22aafc8da7e8f516aca99a1a4

--- a/print.html
+++ b/print.html
@@ -1275,7 +1275,7 @@ fn main() {
 <p>更明確來說，你將會學習到變數、基本型別、註釋以及控制流程。這些基本概念會出現在每個 Rust 程式中，所以提早學習這些概念可以爲你打下穩健的基礎。</p>
 <blockquote>
 <h4><a class="header" href="#關鍵字keywords" id="關鍵字keywords">關鍵字（Keywords）</a></h4>
-<p>Rust 程式語言和其他語言一樣會保留一系列的 <em>關鍵字（keywords）</em>。請注意你將無法用這些字作爲變數或函式名稱。大多數關鍵字都有特別意義，而你將會在你的 Rust 程式使用它們在做不同的任務；而有一些目前則還沒有任何用途，但是在未來可能會被 Rust 加入所以作爲保留。你可以在<a href="appendix-01-keywords.html">附錄 A</a> 查看關鍵字列表。</p>
+<p>Rust 程式語言和其他語言一樣會保留一系列的<em>關鍵字（keywords）</em>。請注意你將無法用這些字作爲變數或函式名稱。大多數關鍵字都有特別意義，而你將會在你的 Rust 程式使用它們來處理不同的任務；而有一些目前則還沒有任何用途，但是在未來可能會被 Rust 加入所以作爲保留。你可以在<a href="appendix-01-keywords.html">附錄 A</a> 查看關鍵字列表。</p>
 </blockquote>
 <blockquote>
 <ul>
