deploy: 32273f9747bf0b322c3aca4b77341cbc0a1ed14b

--- a/ch03-04-comments.html
+++ b/ch03-04-comments.html
@@ -176,7 +176,7 @@
 </span>// hello, world
 <span class="boring">}
 </span></code></pre></pre>
-<p>在 Rust 中，理想的註解風格是用兩行斜線在加上一個空格起頭，然後註解就能一直寫到該行結束爲止。如果註解會超過一行的話，你需要在每一行都加上 <code>//</code>，如下所示：</p>
+<p>在 Rust 中，慣用的註解風格是用兩行斜線在加上一個空格起頭，然後註解就能一直寫到該行結束爲止。如果註解會超過一行的話，你需要在每一行都加上 <code>//</code>，如下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
