deploy: 23fc85f05ffeb704fe93084943402eb175f76c47

--- a/print.html
+++ b/print.html
@@ -18346,15 +18346,15 @@ fn handle_connection(mut stream: TcpStream) {
 </code></pre></pre>
 <p><span class="caption">範例 20-10：識別 <em>/sleep</em> 並沉睡 5 秒鐘來模擬緩慢的請求</span></p>
 <p>此程式碼有點砸算，但已經足夠作爲模擬用途了。我們建立了另一個請求 <code>sleep</code>，且我們的伺服器能識別其資料。我們在 <code>if</code> 區塊後加上 <code>else if</code> 來檢查 <em>/sleep</em> 的請求。當收到請求時，伺服器將會在成功回傳 HTML 頁面前沉睡 5 秒鐘。</p>
-<p>你可以看出我們的伺服器有多基本：真實的函式庫會以叫不冗長的方式來識別處理數種請求！</p>
+<p>你可以看出我們的伺服器有多基本：真實的函式庫會以較不冗長的方式來識別處理數種請求！</p>
 <p>使用 <code>cargo run</code> 來啓動伺服器，然後開啟兩個瀏覽器視窗：一個請求 <em>http://127.0.0.1:7878/</em> 然後另一個請求 <em>http://127.0.0.1:7878/sleep</em>。如果你輸入好幾次 <em>/</em> URI 的話，你會如之前一樣迅速地收到回應。但如果你先輸入 <em>/sleep</em> 在讀取 <em>/</em> 的話，你會看到 <em>/</em> 得等待 <code>sleep</code> 沉睡整整 5 秒鐘後才能讀取。</p>
-<p>我們友好幾種方式能改變網頁伺服器的運作方式，來避免緩慢請求造成的請求堆積。其中一種就是我們要實作的執行緒池（thread pool）。</p>
+<p>我們有好幾種方式能改變網頁伺服器的運作方式，來避免緩慢請求造成的請求堆積。其中一種就是我們要實作的執行緒池（thread pool）。</p>
 <h3><a class="header" href="#透過執行緒池改善吞吐量" id="透過執行緒池改善吞吐量">透過執行緒池改善吞吐量</a></h3>
-<p>*執行緒池（thread pool）*會產生一群執行緒來等待並隨時準備好處理任務。當程式收到新任務時，它會將此任務分配給執行緒池其中一條執行緒，然後該執行緒就會處理該任務。池中剩餘的執行緒在第一條執行緒處理任務時，仍能隨時處理任何其他來淋得任務。當第一條執行緒處理完成時，他會回到閒置執行緒池之中，等待處理新的任務。執行緒池讓你能並行處理連線，增加伺服器的吞吐量。</p>
+<p>*執行緒池（thread pool）*會產生一群執行緒來等待並隨時準備好處理任務。當程式收到新任務時，它會將此任務分配給執行緒池其中一條執行緒，然後該執行緒就會處理該任務。池中剩餘的執行緒在第一條執行緒處理任務時，仍能隨時處理任何其他來臨的任務。當第一條執行緒處理完成時，他會回到閒置執行緒池之中，等待處理新的任務。執行緒池讓你能並行處理連線，增加伺服器的吞吐量。</p>
 <p>我們會限制執行緒池的數量爲少量的數量就好，以避免我們造成阻斷服務（Denial of Service,  DOS）攻擊。如果我們的程式每次遇到新的請求時就產生新的執行緒，某個人就可以產生一千萬個請求至我們的伺服器，來破壞並用光我們伺服器的資源，並導致所有請求的處理都被擱置。</p>
 <p>所以與其產生無限制的執行緒，我們會有個固定數量的執行緒在池中等待。當有請求來臨時，它們會被送至池中處理。此池會維護一個接收請求的佇列（queue）。每個執行緒會從此佇列彈出一個請求、處理該請求然後再繼續向佇列索取下一個請求。有了此設計，我們就可以同時處理 <code>N</code> 個請求，其中 <code>N</code> 就是執行緒的數量。如果每個執行緒都負責到需要長時間處理的請求，隨後的請求還是會阻塞佇列，但是我們至少增加了能夠同時處理長時間請求的數量。</p>
 <p>此技巧只是其中一種改善網頁伺服器吞吐量的方式而已。其他你可能會探索到的選項還有 fork/join 模型或是單執行緒非同步模型。如果你對此議題有興趣，你可以閱讀其他解決方案，並嘗試實作到 Rust 中。像 Rust 這種低階語言，這些所有選項都是可能的。</p>
-<p>在我們開始實作執行緒池之前，讓我們討論一下使用該池會是什麼樣子。當你嘗試設計程式碼時，先寫出使用者的介面能協助引導你的設計。寫出程式碼的 API，使其能以你所期望的方式呼叫，然後在該結構內實作功能，而不是先實作功能在設計公開 API。</p>
+<p>在我們開始實作執行緒池之前，讓我們討論一下使用該池會是什麼樣子。當你嘗試設計程式碼時，先寫出使用者的介面能協助引導你的設計。寫出程式碼的 API，使其能以你所期望的方式呼叫，然後在該結構內實作功能，而不是先實作功能再設計公開 API。</p>
 <p>類似於第十二章的專案所用到的測試驅動開發（test-driven development），我們會在此使用編譯器驅動開發方式。我們會先寫出呼叫所預期函式的程式碼，然後觀察編譯器的錯誤來決定接下來該改變什麼，才能讓程式碼成功運行。</p>
 <h4><a class="header" href="#如果我們對每個請求都產生執行緒的程式碼結構" id="如果我們對每個請求都產生執行緒的程式碼結構">如果我們對每個請求都產生執行緒的程式碼結構</a></h4>
 <p>首先，讓我們先探討如果我們的程式碼都對每次連線建立新的執行緒會怎樣。如之前提及的，這不會是我們最終的計劃，因爲這有可能會產生無限條執行緒的問題，但是這是個很好的起始點。範例 20-11 在 <code>main</code> 的 <code>for</code> 迴圈中，對每個流都產生一條新的執行緒。</p>
