--- a/ch03-01-variables-and-mutability.html
+++ b/ch03-01-variables-and-mutability.html
@@ -170,13 +170,13 @@
                         <h2><a class="header" href="#變數與可變性" id="變數與可變性">變數與可變性</a></h2>
 <p>如同第二章提到的，變數預設是不可變的。這是 Rust 推動你能充分利用 Rust 提供的安全性和簡單地並行性來寫程式的許多方法之一。不過，你還是有辦法能讓你的變數成爲可變的。讓我們來探討爲何 Rust 鼓勵你多多使用不可變，以及何時你會想要改爲可變的。</p>
 <p>當一個變數是不可變的，只要有數值綁定在一個名字上，你就無法改變其值。爲了方便說明，讓我們使用 <code>cargo new variables</code> 在 <em>projects</em> 目錄下產生一個新專案叫做 <em>variables</em>。</p>
-<p>再來在你的新 <em>variables</em> 目錄下開啟 <em>src/main.rs</em> 然後覆蓋程式碼爲以下內容，這是段還無法編譯的程式碼：</p>
+<p>再來在你的 <em>variables</em> 目錄下開啟 <em>src/main.rs</em> 然後覆蓋程式碼爲以下內容，這是段還無法編譯的程式碼：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><code class="language-rust ignore does_not_compile">fn main() {
     let x = 5;
-    println!(&quot;The value of x is: {}&quot;, x);
+    println!(&quot;x 的數值爲：{}&quot;, x);
     x = 6;
-    println!(&quot;The value of x is: {}&quot;, x);
+    println!(&quot;x 的數值爲：{}&quot;, x);
 }
 </code></pre>
 <p>儲存然後使用 <code>cargo run</code> 執行程式。你應該會收到一則錯誤訊息，如下所示：</p>
@@ -190,7 +190,7 @@ error[E0384]: cannot assign twice to immutable variable `x`
   |         |
   |         first assignment to `x`
   |         help: make this binding mutable: `mut x`
-3 |     println!(&quot;The value of x is: {}&quot;, x);
+3 |     println!(&quot;x 的數值爲：{}&quot;, x);
 4 |     x = 6;
   |     ^^^^^ cannot assign twice to immutable variable
 
@@ -201,18 +201,18 @@ error: could not compile `variables`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>此範例顯示了編譯器如何協助你找到你程式碼的錯誤。雖然看到編譯器錯誤訊息總是令人感到沮喪，但這通常是爲了讓你知道你的程式無法安全地完成你想讓它完成的任務。它們 <em>不代表</em> 你不是個優秀的程式設計師！有經驗的 Rustaceans 時常會與編譯器錯誤訊息打交道。</p>
+<p>此範例顯示了編譯器如何協助你找到你程式碼的錯誤。雖然看到編譯器錯誤訊息總是令人感到沮喪，但這通常是爲了讓你知道你的程式無法安全地完成你想讓它完成的任務。它們<em>不代表</em>你不是個優秀的程式設計師！有經驗的 Rustaceans 時常會與編譯器錯誤訊息打交道。</p>
 <p>這則錯誤訊息表示錯誤發生的原因：「cannot assign twice to immutable variable x」，因爲你嘗試第二次賦值給 <code>x</code> 變數。</p>
 <p>當我們嘗試改變一個原先設計爲不可變的變數時，能夠產生編譯時錯誤是很重要的。因爲這樣的情況很容易導致程式錯誤。如果我們有一部分的程式碼在執行時認爲某個數值絕對不會改變，但另一部分的程式碼卻更改了其值，那麼這就有可能讓前一部分的程式碼就可能以無法預測的方式運行。這樣的程式錯誤的起因是很難追蹤的，尤其是當第二部分的程式碼<em>偶而</em>才會改變其值。</p>
 <p>在 Rust 中，編譯器會保證當你宣告一個數值不會被改變時，它就絕對不會被改變。這代表當你讀寫程式碼時，你不需要去追蹤該值可能會被改變，讓你的程式碼更容易推導。</p>
-<p>但同時可變性也是非常有用的，變數只有預設是不可變的，就如同第二章一樣你可以在變數名稱前面加上 <code>mut</code> 讓它們可以成爲可變的。除了允許改變其值之外，<code>mut</code> 像未來的讀取者表明了其他部分的程式碼將會改變此變數的數值。</p>
+<p>但同時可變性也是非常有用的，變數只有預設是不可變的，就如同第二章一樣你可以在變數名稱前面加上 <code>mut</code> 讓它們可以成爲可變的。除了允許改變其值之外，<code>mut</code> 向未來的讀取者表明了其他部分的程式碼將會改變此變數的數值。</p>
 <p>舉例來說，讓我們改變 <em>src/main.rs</em>  成以下程式碼：</p>
 <p><span class="filename">檔案內容：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let mut x = 5;
-    println!(&quot;The value of x is: {}&quot;, x);
+    println!(&quot;x 的數值爲：{}&quot;, x);
     x = 6;
-    println!(&quot;The value of x is: {}&quot;, x);
+    println!(&quot;x 的數值爲：{}&quot;, x);
 }
 </code></pre></pre>
 <p>當你執行程式的話，我們會得到：</p>
@@ -220,28 +220,28 @@ To learn more, run the command again with --verbose.
    Compiling variables v0.1.0 (file:///projects/variables)
     Finished dev [unoptimized + debuginfo] target(s) in 0.30s
      Running `target/debug/variables`
-The value of x is: 5
-The value of x is: 6
+x 的數值爲：5
+x 的數值爲：6
 </code></pre>
-<p>當使用 <code>mut</code> 時，我們可以將 <code>x</code> 的數值錯從 <code>5</code> 改變爲 <code>6</code>。有時候比起只有不可變變數，你會想要將某些變數改爲可變的，讓它更容易編寫。</p>
+<p>當使用 <code>mut</code> 時，我們可以將 <code>x</code> 的數值從 <code>5</code> 改變爲 <code>6</code>。有時候比起只有不可變變數，你會想要將某些變數改爲可變的，讓它更容易編寫。</p>
 <p>當然除了防止程式錯誤以外，這還有很多權衡取捨。舉例來說，當你擁有一個大型資料結構時，變更其值通常會比複製然後返回重新分配的實例還來的快。不過在比較小的資料結構，用函式程式語言的風格產生新的實例會比較容易思考，所以損失一些效能會比損失閱讀性來得好。</p>
 <h3><a class="header" href="#變數與常數的差異" id="變數與常數的差異">變數與常數的差異</a></h3>
 <p>不能夠變更數值的情況可能會讓你聯想到其他程式語言都有的概念：<em>常數（constants）</em>。和不可變變數一樣，常數會讓數值與名稱綁定且不允許被改變，但是不可變變數與常數還是有些差異。</p>
 <p>首先，你無法在使用常數使用 <code>mut</code>，常數不是預設不可變，它們永遠都不可變。</p>
-<p>如果你使用 <code>const</code> 宣告而非 <code>let</code> 的話，你<em>必須</em>指明型別。我們會在下一章<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore -->詳細解釋型別與型別詮釋，所以現在先別擔心細節。你只需要先知道你永遠必須先詮釋常數的型別。</p>
+<p>如果你使用 <code>const</code> 宣告而非 <code>let</code> 的話，你<em>必須</em>指明型別。我們會在下一章<a href="ch03-02-data-types.html#%E8%B3%87%E6%96%99%E5%9E%8B%E5%88%A5">「資料型別」</a><!-- ignore -->詳細解釋型別與型別詮釋，所以現在先別擔心細節。你只需要先知道你永遠必須先詮釋常數的型別。</p>
 <p>常數可以被定義在任一有效範圍，包含全域有效範圍。這讓它們非常有用，讓許多部分的程式碼都能夠知道它們。</p>
 <p>最後一個差別是常數只能被常數表達式設置，而不能用函式的結果或任一在運行時產生的其他數值設置。</p>
-<p>以下爲一個常數名稱被宣告爲 <code>MAX_POINTS</code> 的範例，它的數值被設爲 100,000。（Rust 的常數命名規則爲使用全部英文大寫並用底寫區隔每個單字，數值可以用底下區隔來改善可讀性）：</p>
+<p>以下爲一個常數名稱被宣告爲 <code>MAX_POINTS</code> 的範例，它的數值被設爲 100,000。（Rust 的常數命名規則爲使用全部英文大寫並用底寫區隔每個單字，數值可以用底線區隔來改善可讀性）：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>const MAX_POINTS: u32 = 100_000;
 <span class="boring">}
 </span></code></pre></pre>
-<p>在整支程式運行時，常數在它們的範圍內都是有效的，這讓它們是好的選擇在處理在應用程式域中需要被許多程式碼部份所知道的數值，像是一款遊戲中玩家能夠得到的最高分數或者光速的數值。</p>
-<p>將會擴散到你所有程式碼的數值定義爲常數，對於幫助未來程式碼的維護者理解是非常好的選擇。這也讓未來需要更新數值的話，你知道需要修改寫死的地方就好。</p>
+<p>在整支程式運行時，常數在它們的範圍內都是有效的，這讓它們在處理應用程式中需要被許多程式碼部份所知道的數值的情況下是非常好的選擇，像是一款遊戲中玩家能夠得到的最高分數或者光速的數值。</p>
+<p>將會擴散到所有程式碼的數值定義爲常數，對於幫助未來程式碼的維護者理解是非常好的選擇。這也讓未來需要更新數值的話，你知道需要修改寫死的地方就好。</p>
 <h3><a class="header" href="#遮蔽shadowing" id="遮蔽shadowing">遮蔽（Shadowing）</a></h3>
-<p>如同你在猜謎遊戲教學所看到的，在第二章<a href="ch02-00-guessing-game-tutorial.html#comparing-the-guess-to-the-secret-number">「將猜測的數字與祕密數字做比較」</a><!-- ignore --> 你可以用之前的變數再次宣告新的變數，然後新的變數就會遮蔽之前的變數。Rustaceans 會說第一個變數被第二個變數所<em>遮蔽</em>了，這代表該變數被使用時會拿到第二個變數的數值。我們可以用 <code>let</code> 關鍵字來重複宣告相同的變數名稱來遮蔽一個變數：</p>
+<p>如同你在猜謎遊戲教學所看到的，在第二章<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore --> 你可以用之前的變數再次宣告新的變數，然後新的變數就會遮蔽之前的變數。Rustaceans 會說第一個變數被第二個變數所<em>遮蔽</em>了，這代表該變數被使用時會拿到第二個變數的數值。我們可以用 <code>let</code> 關鍵字來重複宣告相同的變數名稱來遮蔽一個變數：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 5;
@@ -250,18 +250,18 @@ The value of x is: 6
 
     let x = x * 2;
 
-    println!(&quot;The value of x is: {}&quot;, x);
+    println!(&quot;x 的數值爲：{}&quot;, x);
 }
 </code></pre></pre>
-<p>此程式首先將 <code>x</code> 給與 <code>5</code>，然後它用 <code>let x =</code> 遮蔽了 <code>x</code> 變數取代了原本的變數變爲 <code>6</code>。第三次的 <code>let</code> 陳述式一樣遮蔽了 <code>x</code> 讓它將原本的值乘與 <code>2</code>，讓 <code>x</code> 最終的數值爲 <code>12</code>。當我們運行此程式時，當會輸出以下結果：</p>
+<p>此程式首先將 <code>x</code> 給予 <code>5</code>，然後它用 <code>let x =</code> 遮蔽了 <code>x</code> 變數取代了原本的變數變爲 <code>6</code>。第三次的 <code>let</code> 陳述式一樣遮蔽了 <code>x</code> 讓它將原本的值乘與 <code>2</code>，讓 <code>x</code> 最終的數值爲 <code>12</code>。當我們運行此程式時，當會輸出以下結果：</p>
 <pre><code class="language-console">$ cargo run
    Compiling variables v0.1.0 (file:///projects/variables)
     Finished dev [unoptimized + debuginfo] target(s) in 0.31s
      Running `target/debug/variables`
-The value of x is: 12
+x 的數值爲：12
 </code></pre>
 <p>遮蔽與標記變數爲 <code>mut</code> 是不一樣的，因爲如果我們不小心重新賦值而沒有加上 <code>let</code> 關鍵字的話，是會產生編譯期錯誤的。使用 <code>let</code> 的話，我們可以作出一些改變，然後在這之後該變數仍然是不可變的。</p>
-<p>另一個 <code>mut</code> 與遮蔽不同的地方是，爲我們能有效地再次運用 <code>let</code> 產生新的變數，我們可以在重新運用相同名稱時改變它的型別。舉例來說，當我們希望程式要求使用者顯示出字串間應該顯示多少空格，但同時我們又希望它被存爲一個數字，我們可以這樣做：</p>
+<p>另一個 <code>mut</code> 與遮蔽不同的地方是，我們能有效地再次運用 <code>let</code> 產生新的變數，可以在重新運用相同名稱時改變它的型別。舉例來說，當我們希望程式要求使用者顯示出字串間應該顯示多少空格，但同時我們又希望它被存爲一個數字時，我們可以這樣做：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let spaces = &quot;   &quot;;
     let spaces = spaces.len();
@@ -289,8 +289,7 @@ error: could not compile `variables`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Now that we’ve explored how variables work, let’s look at more data types they
-can have.</p>
+<p>現在我們講完變數了，讓我們看看它們可以擁有的資料型別吧。</p>
 <blockquote>
 <ul>
 <li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
